--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.1.1",
+    "@microsoft/signalr": "^9.0.6",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.3",
     "react": "^19.1.0",
