--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@microsoft/signalr": "^9.0.6",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.3",
+    "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/lodash": "^4.17.20",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
