--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@microsoft/signalr": "^9.0.6",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.3",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.3",
+    "react-use": "^17.6.0",
     "zod": "^4.0.5"
   },
   "devDependencies": {
